Remove min-height from mutliselect dropdown to solve the problem of vertical alignment in IE11

--- a/src/dropdown/dropdown.scss
+++ b/src/dropdown/dropdown.scss
@@ -221,14 +221,7 @@ $height-small: 30px !default;
       height: auto;
 
       .Select-multi-value-wrapper {
-        min-height: $height;
         height: auto;
-      }
-    }
-
-    &.is-small {
-      .Select-multi-value-wrapper {
-        min-height: $height-small;
       }
     }
 
